--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+amplify-chatbot.hydrated {
+  --bot-background-color: #326dd9;
+  --bot-text-color: white;
+  --user-background-color: #7a7a7a;
+  --amplify-primary-color: #326dd9;
+  --height: 70vh;
+  display: block;
+  position: fixed;
+  bottom: 65px;
+  right: 20px;
+  z-index: 9999;
+  /* background: #f5f3f3; */
+  --background-color: #f0f0f0;
+  border-radius: 9px;
+}
+
+.chatButton {
+  position: fixed !important;
+  background-color: #326dd9 !important;
+  bottom: 20px;
+  right: 20px;
 }
